Updated routes and fixed getting apps and users without token
